--- a/style.css
+++ b/style.css
@@ -51,3 +51,14 @@ body {
     color: cornflowerblue;
 
 }
+img{
+    transition:transform 0.2s;
+}
+img:hover{
+    transform: scale(0.9);
+}
+#line{
+    width:5px;
+    height: 5px;
+    color:darkblue;
+}
